@@ -6,10 +6,18 @@
 #define _CHOICES_H
 
 void 		choices_init	       (void);
+void 		choices_migrate	       (void);
+
 GPtrArray	*choices_list_dirs     (char *dir);
 void		choices_free_list      (GPtrArray *list);
-guchar 		*choices_find_path_load(const char *leaf, const char *dir);
-guchar	   	*choices_find_path_save(const char *leaf, const char *dir,
+gchar 		*choices_find_path_load(const char *leaf, const char *dir);
+gchar 		*choices_find_xdg_path_load(const char *leaf, const char *dir,
+					    const char *site);
+gchar	   	*choices_find_path_save(const char *leaf, const char *dir,
 					gboolean create);
+gchar	   	*choices_find_xdg_path_save(const char *leaf, const char *dir,
+					    const char *site, gboolean create);
+GPtrArray       *choices_list_xdg_dirs(char *dir, char *site);
+
 
 #endif /* _CHOICES_H */
