@@ -89,7 +89,7 @@ void read_globicons()
 	if (!glob_icons)
 		glob_icons = g_hash_table_new(g_str_hash, g_str_equal);
 
-	path = choices_find_path_load("globicons", PROJECT);
+	path = choices_find_xdg_path_load("globicons", PROJECT, SITE);
 	if (!path)
 		return;	/* Nothing to load */
 
@@ -366,7 +366,8 @@ static void radios_changed(gpointer data)
 			char *path, *type;
 
 			type = g_strconcat(mime_type->media_type, ".png", NULL);
-			path = choices_find_path_load(type, "MIME-icons");
+			path = choices_find_xdg_path_load(type, "MIME-icons",
+							  SITE);
 			g_free(type);
 			drop_box_set_path(drop_box, path);
 			g_free(path);
@@ -378,7 +379,8 @@ static void radios_changed(gpointer data)
 
 			type = g_strconcat(mime_type->media_type, "_",
 					   mime_type->subtype, ".png", NULL);
-			path = choices_find_path_load(type, "MIME-icons");
+			path = choices_find_xdg_path_load(type, "MIME-icons",
+							  SITE);
 			g_free(type);
 			drop_box_set_path(drop_box, path);
 			g_free(path);
@@ -431,7 +433,7 @@ static void write_globicons(void)
 	gchar *save = NULL, *save_new = NULL;
 	xmlDocPtr doc = NULL;
 
-	save = choices_find_path_save("globicons", PROJECT, TRUE);
+	save = choices_find_xdg_path_save("globicons", PROJECT, SITE, TRUE);
 
 	if (!save)
 		return;		/* Saving is disabled */
@@ -578,7 +580,7 @@ static gboolean set_icon_for_type(MIME_type *type, const gchar *iconpath,
 		leaf = g_strconcat(type->media_type, "_", type->subtype,
 								".png", NULL);
 
-	target = choices_find_path_save(leaf, "MIME-icons", TRUE);
+	target = choices_find_xdg_path_save(leaf, "MIME-icons", SITE, TRUE);
 	g_free(leaf);
 
 	if (!target)
