@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+25-Apr-2005
+~~~~~~~~~~~
+Change over from CHOICESPATH to XDG_CONFIG_HOME and XDG_CONFIG_DIRS (Stephen
+Watson).
+
 21-Apr-2005
 ~~~~~~~~~~~
 Try to cope with BadWindow errors (suggested by Kacper Wysock).
